2007-07-11  Mark Ellis <mark@mpellis.org.uk>

	* added notification for device (dis)connect
	* src/Makefile.am - tidy up

2007-07-10  Mark Ellis <mark@mpellis.org.uk>

	* made SynceTrayIcon as subclass of EggTrayIcon

2007-07-09  Mark Ellis <mark@mpellis.org.uk>

	* added man page
	* odccm-client.c - fixed return values from odccm_device_get_rapi_connection()
	* synce-trayicon.c - updated gnome calls

2007-07-05  Mark Ellis <mark@mpellis.org.uk>

	* fixed odccm support
	* fixed comms when stopping/starting vdccm
	* make gnome keyring mandatory
	* explicitly use default keyring to delete secret
	* give password entry focus in dialog
	* remove disconnect from menu when using odccm
	* tidy logging statements

2007-06-24  Mark Ellis <mark@mpellis.org.uk>

	* major structural changes, using gobject
	* dropped support for 'classic' dccm
	* added support for vdccm
	* added untested support for odccm
	* added skeleton support for multiple devices
	* support for password per device

2007-06-11  Mark Ellis <mark@mpellis.org.uk>

	* eggtrayicon changes from Whoopie

2007-05-05  Mark Ellis <mark@mpellis.org.uk>

	* updated configure.ac.in and corrected version handling
	* typo for password_label in preferences.c
	* remove excess _set_sensitive for software manager menu item
	* change deprecated gtk_idle_add for g_idle_add
	* store password in gnome-keyring
	* add start/stop/restart dccm menu items
	* use gtk stock icon functions

2004-01-22  Mattias Eriksson <snaggen@acc.umu.se

	* Add the russian translation by Michael Shigorin

2004-01-21  Mattias Eriksson <snaggen@acc.umu.se

	* Add some files wanted by automake
	* Add i18n and swedish translation
	* And add this ChangeLog
	* Correcting the files I stole from some other project 
	  with their credits and stuff... ooops ;-)