@@ -1,7 +1,5 @@
-## Makefile.am -- Process this file with automake to produce Makefile.in
+SUBDIRS = 22x22 48x48
 
-pixmapdir = $(datadir)/icons/hicolor/22x22/apps
-pixmap_DATA = synce-gray-small.png synce-color-small.png
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 install-data-hook: update-icon-cache
 uninstall-hook: update-icon-cache
@@ -13,5 +11,3 @@ update-icon-cache:
 		echo "*** Icon cache not updated. After (un)install, run this:"; \
 		echo "***   $(gtk_update_icon_cache)"; \
 	fi
-
-EXTRA_DIST = $(pixmap_DATA)
